# amnesia

./: CMakeLists.txt  Makefile  Mux.cpp  Mux.h  amnesia.cpp  amnesia.h  amnesia_frontpanel.fpd
core/: Amnesia.cpp  Amnesia.h  Cd22m3494.cpp  Cd22m3494.h
frontpanel/: frontpanel.dxf  frontpanel.fpd  frontpanel_acad2010.dwg  frontpanel_acad2013.dwg
hardware/: cd22m3494_dip.dip  cd22m3494_hybrid_minimal.dip  cd22m3494_smd.dch  cd22m3494_smd.dip  dual_cd22m3494_smd.dch
juce/: AppConfig.h  JuceHeader.h
obsolete/frontpanel/: frontpanel.fpd
obsolete/hardware/: cd22m3494_dip.dch  cd22m3494_dip.dip  cd22m3494_hybrid.dch  cd22m3494_hybrid.dip  cd22m3494_smd.dch  cd22m3494_smd.dip  cd22m3494_smd.dipbak  dual_cd22m3494_smd.dip
schematics/: CD22M3494_17c45a8ca64a3d1444d230d58c9985ca_1.fzp  MCP23017_I2C_I_O_Expander__19faab0a7934a9f047d7a998da98e8af.fzp  amnesia_shield.dch  amnesia_shield.dip  amnesia_v2.dch  amnesia_v2.dip  analog_board.fzz  arduino_shield.fzz  led_output_board.fzz  led_output_board_v2.fzz  mega Shield 02.dip  top_control_board.fzz
ui/: amnesia.jucer
ui/Builds/LinuxMakefile/: Makefile  comp
ui/Builds/VisualStudio2017/: amnesia.sln  amnesia_App.vcxproj  amnesia_App.vcxproj.filters  resources.rc
ui/JuceLibraryCode/: AppConfig.h  JuceHeader.h
ui/Source/: Main.cpp  MainComponent.cpp  MainComponent.h  MuxNode.cpp  MuxNode.h  Node.cpp  Node.h  NodeConnectionDialog.cpp  NodeConnectionDialog.h
